# cmd/server/main.go
@@ -25,6 +25,10 @@ type App struct {
 // @host localhost:8080
 // @BasePath /
 // @schemes http https
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and JWT token.
 func main() {
 	// Load environment variables
 	if err := godotenv.Load(); err != nil {
